--- a/Angular/index.html
+++ b/Angular/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   <script src='1-data-types.js'></script>
+   <script src='2-execution-context.js'></script>
 </head>
 <body>
    <h1>JS Learn_</h1> <hr/>
